tests/NormalTests/paczka1/fuzzy1/65865253.err
Error in line 3: hfDZkaOzI A526 11,4
Error in line 14: dl3nfTxLC S170 31,4
Error in line 16: dl3nfTxLC A526 76,71
Error in line 15: dl3nfTxLC S517 78,4
Error in line 17: dl3nfTxLC A526 137,0
